# data_privacy_law

./: Home.py  LICENSE  README.md  environment.ylm  environment.yml  local_llama.py  main_page.py  pdf_reader_semantic_full.py  pyproject.toml  requirements.txt
.github/workflows/: build_test.yml  ci.yml
components/: experimental_llm_manager.py  map_generator.py  test_index.py  test_pdf_funcs.py
components/data/: bill_info.csv
components/faiss_index/: index.faiss  index.pkl
components/pages/: 1_State_Privacy.py  2_Federal_Privacy.py  3_Comprehensive_State_Privacy.py  4_EU_GDPR.py
components/tests/: test_env.py  test_extractingfrompdfs.py  test_llm.py  test_llm_manager.py  test_ui_comprehensivestatepage.py  test_ui_federalprivacypage.py  test_ui_gdpr.py  test_ui_stateprivacy.py
data/: bill_info.csv
data_privacy_law/: .pylintrc  experimental_llm_manager.py  parse_bills.py
data_privacy_law/app/: Home.py
data_privacy_law/db_manager/: faiss_db_manager.py  pdf_parser.py
data_privacy_law/faiss_index/: index.pkl
data_privacy_law/llm_manager/: experimental_llm_manager.py  llm_manager.py
data_privacy_law/pages/: 4_EU_GDPR.py
data_privacy_law/tests/: __init__.py  test_db_manager.py  (+8 more)
docs/: component_spec.md  functional_spec.md  milestones.md  technical_spec.md  users.md
examples/: demo_link.md
faiss_index/: index.faiss  index.pkl
pages/: 1_State_Privacy.py  2_Federal_Privacy.py  3_Comprehensive_Privacy.py  3_Comprehensive_State_Privacy.py  5_Add_Documents.py  GDPR_laws.py  comprehensive_laws.py  federal_laws.py  homepage.py  sectorview.py  stateview.py
(+11 files in other folders)
